# aiogram-dialog-bot-template

./: .env.dist  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
bot/: __main__.py  runners.py
bot/configs/: app.py
bot/database/: types.py
bot/database/gateways/: base.py  users.py
bot/database/models/: general.py
bot/factory/: __init__.py  bot.py  dispatcher.py
bot/scheduler/: __init__.py  general.py
bot/telegram/extra/: __init__.py  pm_banned.py
bot/telegram/middlewares/: __init__.py
bot/utils/database/: __init__.py  normalize_iterable.py
bot/utils/logger/: __init__.py  setup.py
migrations/: env.py
migrations/versions/: 001_create_tables.py
src/: .env.dist  __main__.py  app_config.py  exceptions.py  runners.py
src/data/: __init__.py  constants.py  logging_config.py
src/database/: __init__.py
src/database/gateways/: __init__.py  base.py  users.py
src/database/models/: __init__.py  base.py  general.py  user.py
src/enums/: __init__.py  middleware_event_type.py  tag.py
src/factory/: __init__.py  app_config.py  bot.py  create_app_config.py  dispatcher.py
src/middlewares/: __init__.py  event_typed.py
src/middlewares/outer/: __init__.py  database.py  user.py
src/migrations/: env.py
src/migrations/versions/: 001_create_tables.py  001_create_user.py
src/scheduler/: general.py
src/scheduler/triggers/: __init__.py  calendar.py  interval.py
src/services/database/: __init__.py  context.py  create_pool.py  uow.py
src/utils/: msgspec_json.py
(+52 files in other folders)
