[tool.poetry]
name = "aiogram-bot-template"
version = "0.1.0"
description = ""
authors = ["kesevone <kesevone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
aiogram-dialog = "^2.2.0a3"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
psycopg = "^3.1.18"
redis = "^5.1.0b4"
pydantic-settings = "^2.2.1"
sulguk = "^0.7.0"
msgspec = "^0.18.6"
apscheduler = "3.10.4"
black = "^24.2.0"
ruff = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
